- fixed bugs do to HEUR_TIMING SCIP_HEURTIMING_AFTERPROPLOOP which appeared during repropagation
- fixed bug in solve.c: make sure SCIP terminates correctly also when a user interrupt or gap limit is reached, i.e., avoid error "pricing was aborted, but no branching could be created!"
- fixed bug in sepa_rapidlearning.c, stop processing if there are no binary variables left

plugins:
- added constraint handler for second order cone constraints (cons_soc.(c|h))
- added packing/partitioning orbitope constraint handler for symmetry handling (cons_orbitope.<c/h>)
- added heuristic zirounding (heur_zirounding.{c,h})

parameters: 
- added parameter <misc/usesmalltables> which results in using smaller tables for names, cliques and cuts and improves the
  performace for smaller instances, default value FALSE 
- added parameter <misc/usevartable> and <misc/useconstable> which turns on/off the usage of hashtables mapping from 
  variable/constraint names to the variables/constraints; when turned off, SCIPfindVar() and SCIPfindCons() may not be used; 
  the hashtables can be turned off for subMIPs to improve the performance, default value TRUE
- removed parameter constraints/knapsack/maxnumcardlift and adapted setting files
- added parameter <reading/zplreader/usestartsol> which allows to switch ZIMPL start solutions off, default value TRUE
- added parameter <lp/simplexrowrep> telling simplex solver to use row representation of the basis (if possible), default value FALSE
- added parameter <heuristics/crossover/dontwaitatroot> that allows to call crossover at root node independently from nwaitingnodes

SCIP version 1.2.0
===============

interface:
- new parameter "mksetcoefsvalid" in lp.c: SCIPlpCalcMIR(), scip.c: SCIPcalcMIR(), and sepa_cmir.c: tryDelta() to store
  whether "mksetcoefs" computed in SCIPlpCalcMIR() is valid. If the mixed knapsack constraint obtained after aggregating LP rows 